force-app/main/default/objects/ZRH_RutaIntegracion__mdt/ZRH_RutaIntegracion__mdt.object-meta.xml
<CustomObject>
    <label>ZRH Ruta Integracion</label>
    <pluralLabel>ZRH Rutas Integraciones</pluralLabel>
</CustomObject>