force-app/main/default/objects/ZRH_RutaIntegracion__mdt/fields/ZRH_Cabeceras__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Cabeceras__c</fullName>
    <label>Cabeceras</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>