force-app/main/default/objects/ZRH_RutaIntegracion__mdt/fields/ZRH_RutaURL__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RutaURL__c</fullName>
    <label>Ruta URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>