force-app/main/default/objects/ZRH_RutaIntegracion__mdt/fields/ZRH_ServicioIntegracion__c.field-meta.xml
<CustomField>
    <fullName>ZRH_ServicioIntegracion__c</fullName>
    <label>Servicio Integracion</label>
    <referenceTo>ZRH_ServicioIntegracion__mdt</referenceTo>
    <relationshipLabel>Rutas Integraciones</relationshipLabel>
    <relationshipName>RutasIntegraciones</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>