force-app/main/default/objects/ZRH_RutaIntegracion__mdt/listViews/ZRH_TodosPersonalizado.listView-meta.xml
<ListView>
    <fullName>ZRH_TodosPersonalizado</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ZRH_Cabeceras__c</columns>
    <columns>ZRH_Metodo__c</columns>
    <columns>ZRH_RutaURL__c</columns>
    <columns>ZRH_ServicioIntegracion__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos(personalizado)</label>
</ListView>